Add alternating row background to pricing summary table

--- a/index.html
+++ b/index.html
@@ -355,6 +355,10 @@
             border-radius: 0;
         }
 
+        .pricing-summary table tr:nth-child(even) {
+            background: transparent;
+        }
+
         .feature-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
