--- a/index.html
+++ b/index.html
@@ -2412,11 +2412,11 @@
     <h2>Contact Information</h2>
     <div style="margin-top: 40px; padding: 30px; background: #f5f5f5; border: 1px solid #ddd; border-radius: 8px;">
         <h3 style="margin-top: 0;">For Questions or Clarifications</h3>
-        <p><strong>Neural Arc</strong></p>
-        <p>Email: proposals@neuralarc.ai</p>
-        <p>Phone: +971 XX XXX XXXX</p>
+        <p><strong>Neural Arc Inc.</strong></p>
+        <p>Email: nyra@neuralarc.ai</p>
+        <p>Phone: +971 55 480 0720</p>
         <p>Website: www.neuralarc.ai</p>
-        <p style="margin-top: 20px;"><strong>Primary Contact:</strong> Aniket Sharma, Founder</p>
+        <p style="margin-top: 20px;"><strong>Primary Contact:</strong> Aniket Tapre, Founder</p>
     </div>
     
     <div style="margin-top: 60px; text-align: center; padding: 30px; background: #000; color: #fff; border-radius: 8px;">
